[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/sprites/player/bike_1_left_1.png" type="Texture" id=1]
[ext_resource path="res://src/characters/player/player.gd" type="Script" id=2]
[ext_resource path="res://src/characters/player/_movement.gd" type="Script" id=3]
[ext_resource path="res://src/characters/utils/state_machine.gd" type="Script" id=4]
[ext_resource path="res://src/characters/player/states/idle.gd" type="Script" id=5]
[ext_resource path="res://src/characters/player/moving.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/player/bike_1_right_2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/bike_1_no_exhaust.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/exhaust.png" type="Texture" id=9]
[ext_resource path="res://src/characters/player/states/drifting.gd" type="Script" id=10]
[ext_resource path="res://src/characters/utils/show_reward.tres" type="Animation" id=11]
[ext_resource path="res://src/characters/player/audio_manager.gd" type="Script" id=12]
[ext_resource path="res://src/characters/player/accelerating.gd" type="Script" id=13]
[ext_resource path="res://src/characters/player/decelerating.gd" type="Script" id=14]
[ext_resource path="res://src/characters/player/reversing.gd" type="Script" id=15]
[ext_resource path="res://src/characters/playercrashing.gd" type="Script" id=16]
[ext_resource path="res://assets/sfx/player/die1.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/player/drift1.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/player/crash/enginefail.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sfx/player/breakthrough.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sfx/player/accel.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sfx/player/decel.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sfx/player/topspeed_loop.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/sfx/player/looping_engine_sound.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/sfx/player/die2.wav" type="AudioStream" id=25]
[ext_resource path="res://src/characters/player/states/death.gd" type="Script" id=26]
[ext_resource path="res://assets/sfx/player/crash/bang3.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sfx/player/drift2.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sfx/player/crash/bang2.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sfx/player/crash/crash_bad.wav" type="AudioStream" id=30]
[ext_resource path="res://assets/sfx/player/crash/bang1.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/sfx/player/crash/struggle_start.wav" type="AudioStream" id=32]
[ext_resource path="res://assets/sfx/player/crash/bang4.wav" type="AudioStream" id=33]
[ext_resource path="res://assets/sfx/player/drift3.wav" type="AudioStream" id=34]
[ext_resource path="res://assets/sfx/player/piston.wav" type="AudioStream" id=35]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.99997
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExhaustSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExhaustSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExhaustSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/PixelSmall_v2.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ExhaustSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.498039, 0.831373, 0.0941176, 1 )
position = Vector2( 3, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state_path = NodePath("Movement/Idle")

[node name="Movement" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 5 )

[node name="Moving" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 6 )

[node name="Drifting" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 10 )

[node name="Accelerating" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 13 )

[node name="Decelerating" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 14 )

[node name="Reversing" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 15 )

[node name="Crashing" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 16 )

[node name="Death" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 26 )

[node name="StateLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.596
margin_left = -20.0
margin_top = -30.0
margin_right = 20.0
margin_bottom = 70.0
text = "State"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/show_reward = ExtResource( 11 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RewardLabel" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -20.0
margin_right = 22.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 6 )
text = "+$100"

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 12 )
accel_sfx = ExtResource( 21 )
breakthrough_sfx = ExtResource( 20 )
engine_sfx = ExtResource( 24 )
top_speed_sfx = ExtResource( 23 )
decel_sfx = ExtResource( 22 )
drift_sfx_1 = ExtResource( 18 )
drift_sfx_2 = ExtResource( 28 )
drift_sfx_3 = ExtResource( 34 )
drift_piston_sfx = ExtResource( 35 )
crash_sfx_1 = ExtResource( 31 )
crash_sfx_2 = ExtResource( 29 )
crash_sfx_3 = ExtResource( 27 )
crash_sfx_4 = ExtResource( 33 )
crash_bad_sfx = ExtResource( 30 )
engine_stop_sfx = ExtResource( 19 )
engine_stutter_sfx = ExtResource( 32 )
death_sfx_1 = ExtResource( 17 )
death_sfx_2 = ExtResource( 25 )

[node name="Player1" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player2" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player3" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player4" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player5" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player6" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player7" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Player8" type="AudioStreamPlayer" parent="AudioManager"]
bus = "Player SFX"

[node name="Tween" type="Tween" parent="AudioManager"]
